--- a/styles/sass/abstracts/_utilities.scss
+++ b/styles/sass/abstracts/_utilities.scss
@@ -37,10 +37,6 @@
 
 
 // text stylings
-.highlightBrand {
-  color: var(--white);
-  text-shadow: 2px 2px 4px #0000006d;
-}
 
 .bold {
   font-weight: 700;
