--- a/styles/sass/base/_typography.scss
+++ b/styles/sass/base/_typography.scss
@@ -39,3 +39,10 @@ p{
     font-size: 1.2rem;
 }
 
+
+@include responsiveStyle(mobile){
+    h2{
+        text-align: center;
+    }
+
+}
