--- a/styles/sass/pages/home/_about.scss
+++ b/styles/sass/pages/home/_about.scss
@@ -13,9 +13,9 @@
         font-size: 1.5rem;
         letter-spacing: 1.7;
     }
-
-    a:hover{
-            text-decoration: underline var(--white) 2px;
+    a{
+        color: var(--staticDarkBlue);
+        text-decoration: underline;
     }
     .wrapper {
         display: flex;
