--- a/styles/sass/pages/home/_skills.scss
+++ b/styles/sass/pages/home/_skills.scss
@@ -55,7 +55,7 @@
 @include responsiveStyle(630){
     .techStack{
         grid-template-columns: repeat(3, 1fr);
-        gap:20px 5px ;
+        gap: 15px ;
 
     }
     .techContainer{
